feat : accessing parent folder as a config

--- a/config.yaml
+++ b/config.yaml
@@ -7,3 +7,6 @@ output:
 
 archive:
   archive_location: "~/Desktop/doc-archive"
+  g_drive_parent_folder_id: "1gAb9u5B3d_ifUOhBuBQbv_lb5Qu18yF7"
+
+
