fix : resolve review comments

--- a/config_example.yaml
+++ b/config_example.yaml
@@ -2,6 +2,7 @@ scrape: # Do not change these
   url: "https://documents.gov.lk/view/extra-gazettes/egz.html"
 
 output: # Do not change these
+  metadata_dir: "meta_data"
   years_json: "meta_data/years.json"
   doc_metadata_json: "meta_data/doc_metadata.json"
   upload_results_json: "upload_results/upload_results" 
